from 1.7.0 to 1.7.1
- smarter support of remote routing

from 1.6.1 to 1.7.0
- reconfiguration of exosip2 support into runtime library

from 1.6.0 to 1.6.1
- improved ssl configure check

from 1.5.0 to 1.6.0
- usage of new context aware intermediary voip functions
- fixes for official exosip2 4.0

from 1.4.0 to 1.5.0
- moved switchview into standalone package

from 1.3.3 to 1.4.0
- ucommon abi 6 support

from 1.3.2 to 1.3.3
- systemd related changes; env security model now parsed in system.cpp.
- systemd related changes; OPTIONS has -b default
- systemd related changes; pidfile support

from 1.3.1 to 1.3.2
- more qt automake options for strange qt configs
- fixed systemd support - soon to add to fedora
- sipwitch hotspot --public mode option

from 1.3.0 to 1.3.1
- initial support for exosip2/osip2 4.0
- more mingw32 build support

from 1.2.5 to 1.3.0
- contact for autoconfiguring clients; can be set in cfg or computed
- systemd support lands
- mingw32 build support
- osip2 published dev headers brokenly used derived packages config.h

from 1.2.4 to 1.2.5
- various source build issues with config.h and cleanup
- fixes for cmake pkgconfig searches
- fix group and user handling logic
- fix overlinking for runtime and plugins

from 1.2.3 to 1.2.4
- option to force interface address through config
- world/all global subnet entry

from 1.2.2 to 1.2.3
- dumpconfig option to understand effective config
- user configuration options
- sipwitch policy command to examine access policy and peering

from 1.2.1 to 1.2.2
- cache directory defined and set
- improved management of active configurations
- bumped ucommon dependency up to 5.2.0

from 1.2.0 to 1.2.1
- sip server command line interface options per Simon request
- start of cache support for peers, multicast users, etc
- manpage standardization

from 1.1.4 to 1.2.0
- removed uneeded subscriber thread, cleared cpu usage with plugin.

from 1.1.3 to 1.1.4
- switchview icon resources now themable, new icon resources added.