@@ -353,6 +353,17 @@ if test -z "$zeroconf" ; then
     ],[zeroconf="$zeroconf"])
 fi
 
+srvresolv=""
+SRVRESOLV_LIBS=""
+
+if test -z "$srvresolv" ; then
+    AC_CHECK_HEADER(ruli.h, [
+        AC_DEFINE(SRVRESOLV_RULI, 1, [srv resolv by ruli])
+        SRVRESOLV_LIBS="-lruli"
+        srvresolv="ruli"
+    ],[srvresolv="$srvresolv"])
+fi
+
 AH_BOTTOM([
 #ifndef HAVE_LOCALTIME_R
 #define localtime_r(x, y)   localtime(x)
@@ -383,6 +394,7 @@ else
 fi
 
 AM_CONDITIONAL(ZEROCONF, test ! -z "$zeroconf")
+AM_CONDITIONAL(SRVRESOLV, test ! -z "$srvresolv")
 
 AC_SUBST(cgibindir)
 AC_SUBST(plugindir)
@@ -406,6 +418,7 @@ AC_SUBST(SIPWITCH_FLAGS)
 AC_SUBST(SIPWITCH_LIBS)
 AC_SUBST(SIPWITCH_EXOSIP2)
 AC_SUBST(ZEROCONF_LIBS)
+AC_SUBST(SRVRESOLV_LIBS)
 AC_SUBST(CXXFLAGS)
 AC_SUBST(MODFLAGS)
 AC_SUBST(DLOPEN)
