@@ -1,5 +1,6 @@
 from 1.7.0 to 1.7.1
 - smarter support of remote routing
+- srv resolver plugin for use with libruli
 
 from 1.6.1 to 1.7.0
 - reconfiguration of exosip2 support into runtime library
